Fixed alignment for Recommended By and border between elements

--- a/assets/stylesheets/pages/_photos.scss
+++ b/assets/stylesheets/pages/_photos.scss
@@ -89,7 +89,7 @@
   }
   .mw-border{
     border-bottom: $border-width solid $grey_border2;
-    margin: $std-spacing $side-margin;
+    margin: $std-spacing $zero-margin;
   }
   .AR_2,.AR_1,.AR_3,.AR_4{
     width:100% !important;
